RESOLVED FIXED92943
[EFL] Crash while loading plugin after r121467
https://bugs.webkit.org/show_bug.cgi?id=92943
Summary [EFL] Crash while loading plugin after r121467
Ryuan Choi
Reported 2012-08-01 22:20:01 PDT
r121467 introduced eina_module instead of dlopen. but some codes using dlsym are remaind. So EWebLauncher is crashed while loading plugin when enabled netscape plugin api.
Attachments
Patch (2.06 KB, patch)
2012-08-01 22:39 PDT, Ryuan Choi
no flags
Patch (2.04 KB, patch)
2012-08-02 16:46 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2012-08-01 22:39:22 PDT
Laszlo Gombos
Comment 2 2012-08-02 13:38:37 PDT
Comment on attachment 155976 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=155976&action=review > Source/WebCore/ChangeLog:8 > + r121468 replaced POSIX dlopen to helpers in eina_module, but some codes Nit - should this be 121467 instead of 121468.
Chris Dumez
Comment 3 2012-08-02 13:45:15 PDT
Comment on attachment 155976 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=155976&action=review LGTM but: >> Source/WebCore/ChangeLog:8 >> + r121468 replaced POSIX dlopen to helpers in eina_module, but some codes > > Nit - should this be 121467 instead of 121468. Yes, Laszlo is right, definitely http://trac.webkit.org/changeset/121467
Ryuan Choi
Comment 4 2012-08-02 16:46:29 PDT
Ryuan Choi
Comment 5 2012-08-02 16:47:47 PDT
(In reply to comment #2) > (From update of attachment 155976 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=155976&action=review > > > Source/WebCore/ChangeLog:8 > > + r121468 replaced POSIX dlopen to helpers in eina_module, but some codes > > Nit - should this be 121467 instead of 121468. Oops, my mistake, fixed.
Laszlo Gombos
Comment 6 2012-08-02 17:49:09 PDT
Comment on attachment 156203 [details] Patch r=me. Thanks.
WebKit Review Bot
Comment 7 2012-08-02 18:55:06 PDT
Comment on attachment 156203 [details] Patch Clearing flags on attachment: 156203 Committed r124548: <http://trac.webkit.org/changeset/124548>
WebKit Review Bot
Comment 8 2012-08-02 18:55:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.