[EFL] Crash while loading plugin after r121467 https://bugs.webkit.org/show_bug.cgi?id=92943

Reviewed by Laszlo Gombos.

r121467 replaced POSIX dlopen to helpers in eina_module, but some codes
are not changed.

No new tests, behavior has not changed.

* plugins/efl/PluginPackageEfl.cpp:
(WebCore::PluginPackage::fetchInfo):
Changes dlsym to eina_module_symbol_get to follow changes of r121467.


Canonical link: https://commits.webkit.org/110897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124548 268f45cc-cd09-0410-ab3c-d52691b4dbfc